# web-scrapper

./: .env.example  .gitignore  API.md  Cargo.toml  DEPLOYMENT.md  FEATURES.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  Procfile  README.md  RustConfig  package.json
backend/: .env.example  Cargo.toml  package.json
backend-nodejs/: package-lock.json  package.json
backend-nodejs/src/routes/: analytics.ts  dashboard.ts
backend-nodejs/src/services/: scraper.ts
backend/src/: auth.rs  database.rs  index.ts  main.rs  models.rs  scraper.rs
backend/src/middleware/: auth.ts
backend/src/models/: index.ts
backend/src/routes/: apiKeys.ts  auth.ts  dashboard.ts  scrape.ts
backend/src/services/: auth.ts  database.ts  scraper.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  test-setup.ts
frontend/src/components/: AnimateOnScroll.tsx  ApiDocsPage.tsx  ApiKeysPage.tsx  DashboardHome.tsx  DocumentationPage.tsx  LazyImage.tsx  Loader.tsx  Logo.tsx  Navbar.tsx  SettingsPage.tsx  Sidebar.tsx  Skeleton.tsx  Toast.tsx  UsageAnalytics.tsx  WebScraper.tsx  WebScraperPage.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ApiDocPage.tsx  Dashboard.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/theme/: animations.ts  colors.ts
