[package]
name = "web-scraper-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.20"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = "1.0"
base64 = "0.22"
url = "2.5"
regex = "1.0"
headless_chrome = "1.0"
cookie = "0.16"
mongodb = { version = "2.8", features = ["bson-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
dotenv = "0.15"
futures = "0.3"
